removes / form images path

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <div class="container-fluid">
             <div>
                 <a class="navbar-brand" href="#">
-                    <img style="width:150px" src="/images/logo1.png" class="img img-fluid" alt="">
+                    <img style="width:150px" src="images/logo1.png" class="img img-fluid" alt="">
                 </a>
-                <img style="width:55px" src="/images/logoCric-removebg-preview.png" class="img img-fluid" alt="">
+                <img style="width:55px" src="images/logoCric-removebg-preview.png" class="img img-fluid" alt="">
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -110,7 +110,7 @@
         <div class="row mx-auto align-items-center justify-content-center">
             <div class="col-lg-3 col-md-6 col-sm-12 ">
                 <div class="course_card">
-                    <div class="course_card_img"><img src="/images/management/president.PNG" alt="course" /></div>
+                    <div class="course_card_img"><img src="images/management/president.PNG" alt="course" /></div>
                     <div class="course_card_content">
                         <h3 class="title" style="font-size: medium">PRESIDENT</h3>
                         <p class="description">Mr.ANOOP SATHYAN.</p>
@@ -122,7 +122,7 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12">
                 <div class="course_card">
-                    <div class="course_card_img"><img src="/images/management/secretary.PNG" alt="course" /></div>
+                    <div class="course_card_img"><img src="images/management/secretary.PNG" alt="course" /></div>
                     <div class="course_card_content">
                         <h3 class="title" style="font-size: medium">SECRETARY</h3>
                         <p class="description">Dr.PRABHIRAJ NADARAJAN</p>
@@ -134,7 +134,7 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12">
                 <div class="course_card">
-                    <div class="course_card_img"><img src="/images/management/treassurer.PNG" alt="course" /></div>
+                    <div class="course_card_img"><img src="images/management/treassurer.PNG" alt="course" /></div>
                     <div class="course_card_content">
                         <h3 class="title" style="font-size: medium">TREASURER</h3>
                         <p class="description">Mrs.DEEPA</p>
@@ -154,7 +154,7 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12">
                 <div class="course_card">
-                    <div class="course_card_img"><img src="/images/management/manager.PNG" alt="course" /></div>
+                    <div class="course_card_img"><img src="images/management/manager.PNG" alt="course" /></div>
                     <div class="course_card_content">
                         <h3 class="title" style="font-size: medium">MANAGER OF THE TEAM</h3>
                         <p class="description">Mr.VISAL MURALI</p>
@@ -163,7 +163,7 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12">
                 <div class="course_card">
-                    <div class="course_card_img"><img src="/images/management/mentor.PNG" alt="course" /></div>
+                    <div class="course_card_img"><img src="images/management/mentor.PNG" alt="course" /></div>
                     <div class="course_card_content">
                         <h3 class="title" style="font-size: medium">MENTOR</h3>
                         <p class="description">Mr.HARI GOPINATH</p>
@@ -172,7 +172,7 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-12">
                 <div class="course_card">
-                    <div class="course_card_img"><img src="/images/management/headOfCricket.PNG" alt="course" /></div>
+                    <div class="course_card_img"><img src="images/management/headOfCricket.PNG" alt="course" /></div>
                     <div class="course_card_content">
                         <h3 class="title" style="font-size: medium">HEAD OF CRICKETING OPERATION PATAUDI CC</h3>
                         <p class="description">Mr.SUNIL SAM</p>
@@ -238,9 +238,9 @@
             <div class="row">
                 <div class="col-md-4 footer-column d-flex flex-column align-items-center flex-lg-row  ">
                     <a class="navbar-brand" href="#">
-                        <img style="width:150px" src="/images/logo1.png" class="img img-fluid" alt="">
+                        <img style="width:150px" src="images/logo1.png" class="img img-fluid" alt="">
                     </a>
-                    <img style="width:100px" src="/images/logoCric-removebg-preview.png" class="img img-fluid" alt="">
+                    <img style="width:100px" src="images/logoCric-removebg-preview.png" class="img img-fluid" alt="">
                 </div>
                 <!-- <div class="col-md-4 footer-column">
                     <ul class="nav flex-column">
@@ -346,9 +346,9 @@
         </div>
     </footer>
 
-    <!-- <script src="/js/bootstrap.min.js"></script> -->
-    <script src="backToTop.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src="backToTop.js"></script>
+    <!-- <script src="/js/bootstrap.min.js"></script> -->
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
