--- a/players.html
+++ b/players.html
@@ -34,9 +34,9 @@
     <div class="container-fluid">
         <div>
             <a class="navbar-brand" href="index.html">
-                <img style="width:150px" src="/images/logo1.png" class="img img-fluid" alt="">
+                <img style="width:150px" src="images/logo1.png" class="img img-fluid" alt="">
             </a>
-            <img style="width:55px" src="/images/logoCric-removebg-preview.png" class="img img-fluid" alt="">
+            <img style="width:55px" src="images/logoCric-removebg-preview.png" class="img img-fluid" alt="">
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
