removes / from images path from players.html

--- a/players.html
+++ b/players.html
@@ -123,7 +123,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6">
-                            <img class="w-100 shadow" style="height: 400px;" src="/images/palyers/athuljith.PNG" />
+                            <img class="w-100 shadow" style="height: 400px;" src="images/palyers/athuljith.PNG" />
                         </div>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6">
-                            <img class="w-100 shadow" style="height: 320px;" src="/images/palyers/anshad.PNG" />
+                            <img class="w-100 shadow" style="height: 320px;" src="images/palyers/anshad.PNG" />
                         </div>
                     </div>
                 </div>
@@ -250,7 +250,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6">
-                            <img class="w-100 shadow" style="height: 320px;" src="/images/palyers/amalRamesh.PNG" />
+                            <img class="w-100 shadow" style="height: 320px;" src="images/palyers/amalRamesh.PNG" />
                         </div>
                     </div>
                 </div>
@@ -316,7 +316,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6">
-                            <img class="img w-100 shadow" style="height: 320px;" src="/images/palyers/brijesh.PNG" />
+                            <img class="img w-100 shadow" style="height: 320px;" src="images/palyers/brijesh.PNG" />
                         </div>
                     </div>
                 </div>
@@ -386,7 +386,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6">
-                            <img class="img w-100 shadow" style="height: 320px;" src="/images/palyers/neelSunny.PNG" />
+                            <img class="img w-100 shadow" style="height: 320px;" src="images/palyers/neelSunny.PNG" />
                         </div>
                     </div>
                 </div>
@@ -454,7 +454,7 @@
                         </div>
                         <div class="col-lg-6">
                             <img class="img w-100 shadow" style="height: 436px;"
-                                src="/images/palyers/rahulSharma.PNG" />
+                                src="images/palyers/rahulSharma.PNG" />
                         </div>
                     </div>
                 </div>
@@ -503,9 +503,9 @@
         <div class="row">
             <div class="col-md-4 footer-column d-flex flex-column align-items-center flex-lg-row  ">
                 <a class="navbar-brand" href="#">
-                    <img style="width:150px" src="/images/logo1.png" class="img img-fluid" alt="">
+                    <img style="width:150px" src="images/logo1.png" class="img img-fluid" alt="">
                 </a>
-                <img style="width:100px" src="/images/logoCric-removebg-preview.png" class="img img-fluid" alt="">
+                <img style="width:100px" src="images/logoCric-removebg-preview.png" class="img img-fluid" alt="">
             </div>
             <!-- <div class="col-md-4 footer-column">
                     <ul class="nav flex-column">
