changess the / in nav bar home of players page directory

--- a/players.html
+++ b/players.html
@@ -181,7 +181,7 @@
                 <!-- nxt card -->
                 <div class="row">
                     <div class="col-lg-6">
-                        <img style="" class="w-100 shadow" src="images/palyers/arjun.PNG" />
+                        <img  class="w-100 shadow" src="images/palyers/arjun.PNG" />
                     </div>
                     <div class="col-lg-6">
                         <div class="p-1 mt-0">
@@ -407,7 +407,8 @@
                                 <br>
                                 LEFT HANDED BATTER
                                 LEFT ARM ORTHODOX
-                                SPINNER </p>
+                                SPINNER
+                            </p>
                             <p class="lh-lg">
                                 <span class="fa fa-arrow-right"></span>REPRESENTED U -14 ZONE
                                 <br>
@@ -453,8 +454,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6">
-                            <img class="img w-100 shadow" style="height: 436px;"
-                                src="images/palyers/rahulSharma.PNG" />
+                            <img class="img w-100 shadow" style="height: 436px;" src="images/palyers/rahulSharma.PNG" />
                         </div>
                     </div>
                 </div>
@@ -470,10 +470,11 @@
                             <!-- <h1 class="title-head">
                                         Statement of Purpose (SOP)</h1> -->
                             <h3 class="title-w3l mb-4 pt-4 pt-lg-0">SHENIN M S</h3>
-                            <p class="lead">AGE - 
+                            <p class="lead">AGE -
                                 <br>
                                 RIGHT HANDED BATTER
-                                LEFT ARM FAST</p>
+                                LEFT ARM FAST
+                            </p>
                             <p class="lh-lg">
                                 <span class="fa fa-arrow-right"></span>--
                                 <br>
@@ -571,7 +572,8 @@
 
         <div class="row text-center">
             <div class="col-md-12 box">
-                <span class="copyright quick-links">&copy;<script>
+                <span class="copyright quick-links">&copy;
+                    <script>
                         document.write(new Date().getFullYear())
                     </script> Copyright PATAUDI CRICKET CLUB All Right Reserved, Made With <span style="color: red"
                         class="fa fa-heart"></span> By Aries E Solutions
