--- a/players.html
+++ b/players.html
@@ -181,7 +181,7 @@
                 <!-- nxt card -->
                 <div class="row">
                     <div class="col-lg-6">
-                        <img  class="w-100 shadow" src="images/palyers/arjun.PNG" />
+                        <img class="w-100 shadow" src="images/palyers/arjun.PNG" />
                     </div>
                     <div class="col-lg-6">
                         <div class="p-1 mt-0">
@@ -616,12 +616,12 @@
 <script src="backToTop.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 
-<!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
-</script>
+    </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
     integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous">
-</script> -->
+    </script>
 
 <body>
 
