new files added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <!-- font aswome -->
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <!-- end font aswome -->
+    <!-- animate link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- end animate link -->
 </head>
 
 <body>
@@ -73,17 +76,18 @@
     <!-- end back to top -->
     <section>
         <div class="w-100 leg d-flex justify-content-center">
-            <h1 style="color: #FFFAF4" class="display-3">PATAUDI CRICKET CLUB</h1>
+            <h1 style="color: #FFFAF4" class="display-3 animate__animated animate__zoomIn">WELCOME TO <br>PATAUDI
+                CRICKET CLUB</h1>
         </div>
     </section>
-    <section style="background-color: #EEE3CB">
-        <div class="d-flex flex-column mx-4 mx-lg-5 pt-4 mx-md-5">
-            <div class="d-flex flex-column mx-lg-5 mx-2">
-                <h5 class="smHead">About </h5>
-                <h1 class="lega">PATAUDI CRICKET CLUB</h1>
+    <section style="padding-top: 40px; padding-bottom: 40px">
+        <div class="d-flex flex-column mx-4 mx-lg-5  mx-md-5">
+            <div class="d-flex flex-column mx-lg-5 mx-2 text-center">
+                <h5 class="smHead text-uppercase">About </h5>
+                <h1 style="color: #b81e20;" class="lega">PATAUDI CRICKET CLUB</h1>
             </div>
             <div class="mx-lg-5">
-                <p class="lh-lg pb-4">
+                <p style="color: #979da0;" class="lh-lg text-center p-lg-2 pt-lg-3">
                     PATAUDI CRICKET CLUB started its activities on 15th August 1975 in Kollam District in the rural town
                     of Punalur, known for its historical tradition. A group of young cricket lovers from the place
                     initiated the club. When Pataudi Cricket Club and Kollam District A Division Club joined hands to
@@ -103,79 +107,82 @@
             </div>
         </div>
     </section>
-    <section style="background-color: #F5F3E7" id="teamManagement" class="pt-5">
+    <section id="teamManagement" class="pt- pb-5 teamMan">
         <div class="text-center mx-5">
-            <h2 class="lega">Team Management</h2>
+            <h2 style="color: #b81e20" class="lega">Team Management</h2>
         </div>
-        <div class="row mx-auto align-items-center justify-content-center">
-            <div class="col-lg-3 col-md-6 col-sm-12 ">
-                <div class="course_card">
-                    <div class="course_card_img"><img src="images/management/president.PNG" alt="course" /></div>
-                    <div class="course_card_content">
-                        <h3 class="title" style="font-size: medium">PRESIDENT</h3>
-                        <p class="description">Mr.ANOOP SATHYAN.</p>
-                    </div>
-                    <!-- <div class="course_card_footer"><a class="nav-item" href="https://www.smartcodehub.com/blog">Add
+        <div class="container">
+            <div class="row mx-auto align-items-center justify-content-center">
+                <div class="col-lg-3 col-md-6 col-sm-12 ">
+                    <div class="course_card">
+                        <div class="course_card_img"><img src="images/management/president.PNG" alt="course" /></div>
+                        <div class="course_card_content">
+                            <p class="description">Mr.ANOOP SATHYAN.</p>
+                            <h3 class="title" style="font-size: medium">PRESIDENT</h3>
+                        </div>
+                        <!-- <div class="course_card_footer"><a class="nav-item" href="https://www.smartcodehub.com/blog">Add
                                 Review</a><a class="nav-item" href="https://www.smartcodehub.com/blog">Learn More</a>
                         </div> -->
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-12">
-                <div class="course_card">
-                    <div class="course_card_img"><img src="images/management/secretary.PNG" alt="course" /></div>
-                    <div class="course_card_content">
-                        <h3 class="title" style="font-size: medium">SECRETARY</h3>
-                        <p class="description">Dr.PRABHIRAJ NADARAJAN</p>
                     </div>
-                    <!-- <div class="course_card_footer"><a class="nav-item" href="https://www.smartcodehub.com/blog">Add
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="course_card">
+                        <div class="course_card_img"><img src="images/management/secretary.PNG" alt="course" /></div>
+                        <div class="course_card_content">
+                            <p class="description">Dr.PRABHIRAJ NADARAJAN</p>
+                            <h3 class="title" style="font-size: medium">SECRETARY</h3>
+                        </div>
+                        <!-- <div class="course_card_footer"><a class="nav-item" href="https://www.smartcodehub.com/blog">Add
                                 Review</a><a class="nav-item" href="https://www.smartcodehub.com/blog">Learn More</a>
                         </div> -->
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-12">
-                <div class="course_card">
-                    <div class="course_card_img"><img src="images/management/treassurer.PNG" alt="course" /></div>
-                    <div class="course_card_content">
-                        <h3 class="title" style="font-size: medium">TREASURER</h3>
-                        <p class="description">Mrs.DEEPA</p>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-12">
-                <div class="course_card">
-                    <div class="course_card_img"><img
-                            src="https://www.shutterstock.com/image-vector/silhouette-people-unknown-male-person-260nw-1372192277.jpg"
-                            alt="course" /></div>
-                    <div class="course_card_content">
-                        <h3 class="title" style="font-size: medium">MEDIA MANAGER</h3>
-                        <p class="description">Mr.ARUN</p>
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="course_card">
+                        <div class="course_card_img"><img src="images/management/treassurer.PNG" alt="course" /></div>
+                        <div class="course_card_content">
+                            <p class="description">Mrs.DEEPA</p>
+                            <h3 class="title" style="font-size: medium">TREASURER</h3>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-12">
-                <div class="course_card">
-                    <div class="course_card_img"><img src="images/management/manager.PNG" alt="course" /></div>
-                    <div class="course_card_content">
-                        <h3 class="title" style="font-size: medium">MANAGER OF THE TEAM</h3>
-                        <p class="description">Mr.VISAL MURALI</p>
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="course_card">
+                        <div class="course_card_img"><img
+                                src="https://www.shutterstock.com/image-vector/silhouette-people-unknown-male-person-260nw-1372192277.jpg"
+                                alt="course" /></div>
+                        <div class="course_card_content">
+                            <p class="description">Mr.ARUN</p>
+                            <h3 class="title" style="font-size: medium">MEDIA MANAGER</h3>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-12">
-                <div class="course_card">
-                    <div class="course_card_img"><img src="images/management/mentor.PNG" alt="course" /></div>
-                    <div class="course_card_content">
-                        <h3 class="title" style="font-size: medium">MENTOR</h3>
-                        <p class="description">Mr.HARI GOPINATH</p>
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="course_card">
+                        <div class="course_card_img"><img src="images/management/manager.PNG" alt="course" /></div>
+                        <div class="course_card_content">
+                            <p class="description">Mr.VISAL MURALI</p>
+                            <h3 class="title" style="font-size: medium">MANAGER OF THE TEAM</h3>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-12">
-                <div class="course_card">
-                    <div class="course_card_img"><img src="images/management/headOfCricket.PNG" alt="course" /></div>
-                    <div class="course_card_content">
-                        <h3 class="title" style="font-size: medium">HEAD OF CRICKETING OPERATION PATAUDI CC</h3>
-                        <p class="description">Mr.SUNIL SAM</p>
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="course_card">
+                        <div class="course_card_img"><img src="images/management/mentor.PNG" alt="course" /></div>
+                        <div class="course_card_content">
+                            <p class="description">Mr.HARI GOPINATH</p>
+                            <h3 class="title" style="font-size: medium">MENTOR</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <div class="course_card">
+                        <div class="course_card_img"><img src="images/management/headOfCricket.PNG" alt="course" />
+                        </div>
+                        <div class="course_card_content">
+                            <p class="description">Mr.SUNIL SAM</p>
+                            <h3 class="title" style="font-size: medium">HEAD OF CRICKETING OPERATION PATAUDI CC</h3>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -185,10 +192,10 @@
     <section class="legac p-4" id="legacy">
         <div class="d-flex flex-column mx-lg-5 mx-md-5">
             <div class="mx-lg-5 mx-2">
-                <h2 class="lega">Legacy</h2>
+                <h2 style="color: white" class="lega text-center p-4">Legacy</h2>
             </div>
             <div class="mx-2 mx-lg-5 ">
-                <p class="lh-lg">
+                <p style="color:  #dddbcb; text-align: justify" class="lh-lg p-lg-3">
                     Pataudi was more of a superstar in the 70s than what we give to Sachin Dhoni and Kohli today.
                     At that time when the cricket fever started to grow to a large extent in India, a number of madmen
                     started playing together in Punalur. They started the game with the little knowledge of some people
@@ -218,7 +225,7 @@
                     <!-- <h3 class="title-w3l mb-4">AJAYGHOSH</h3> -->
                     <!-- <p class="lead">AGE - 24<br>
                         RIGHT ARM MEDIUM FAST </p> -->
-                    <p class="lh-lg lega">
+                    <p style="color: #979da0" class="lh-lg lega">
                         Madhuchetten second from Right is
                         the founder of pataudi cricket club on
                         1975 Aug 15 getting inspiration from
@@ -263,19 +270,22 @@
                 <div class="col-md-4 footer-column">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <span class="footer-title">Contact & Support</span>
+                            <span class="footer-title">Contact Us</span>
                         </li>
                         <li class="nav-item">
-                            <a class=""><i class="fa fa-phone foot"></i>+47 45 80 80 80</a>
+                            <a style="color:  #dddbcb" class=""><i class="fa fa-phone foot"></i>+47 45 80 80 80</a>
                         </li>
                         <li class="nav-item">
-                            <a class="" href="#"><i class="fa fa-comments foot"></i>Live chat</a>
+                            <a style="color:  #dddbcb" class="" href="#"><i class="fa fa-comments foot"></i>Live
+                                chat</a>
                         </li>
                         <li class="nav-item">
-                            <a class="" href="#"><i class="fa fa-envelope foot"></i>Contact us</a>
+                            <a style="color:  #dddbcb" class="" href="#"><i class="fa fa-envelope foot"></i>Contact
+                                us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="" href="#"><i class="fa fa-star foot"></i>Give feedback</a>
+                            <a style="color:  #dddbcb" class="" href="#"><i class="fa fa-star foot"></i>Give
+                                feedback</a>
                         </li>
                     </ul>
                 </div>
@@ -310,7 +320,8 @@
                         <script>
                             document.write(new Date().getFullYear())
                         </script> Copyright PATAUDI CRICKET CLUB All Right Reserved, Made With <span style="color: red"
-                            class="fa fa-heart"></span> By Aries E Solutions
+                            class="fa fa-heart"></span> By <a style="color: white;"
+                            href="https://www.ariesesolutions.com/">Aries E Solutions</a>
                     </span>
                 </div>
                 <!-- <div class="col-md-4 box">
@@ -352,10 +363,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
-        </script>
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
         integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous">
-        </script>
+    </script>
 </body>
 
 </html>
