--- a/players.html
+++ b/players.html
@@ -27,6 +27,9 @@
     <!-- font aswome -->
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <!-- end font aswome -->
+    <!-- animate link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!-- end animate link -->
 </head>
 
 <!-- nav start -->
@@ -45,17 +48,17 @@
             </span>
         </button>
         <div style="font-weight: 500" class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item">
+            <ul class="navbar-nav hov">
+                <li class="nav-item hover">
                     <a style="color: black" class="nav-link " aria-current="page" href="index.html">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item hover">
                     <a style="color: black" class="nav-link" href="index.html">Team Management</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item hover">
                     <a style="color: black" class="nav-link" href="index.html">Legacy</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item hover">
                     <a style="color: black" class="nav-link active" href="#players">Players</a>
                 </li>
 
@@ -64,11 +67,17 @@
     </div>
 </nav>
 
+<section class="play d-flex align-items-center justify-content-center">
+    <div class="text-center mx-5 text-center">
+        <h1 style="color: #FFFAF4" class="display-3 animate__animated animate__zoomIn">PLAYERS</h1>
+    </div>
+</section>
+
 <section id="players" class="mt-5">
-    <div>
-        <div class="text-center mx-5">
-            <h2 class="lega">Players</h2>
-        </div>
+    <div class="container">
+        <!-- <div class="text-center mx-5">
+            <h2 style="color: #b81e20" class="lega">Players</h2>
+        </div> -->
         <div>
             <div class="container my-5">
                 <div class="row">
@@ -497,8 +506,6 @@
 <!-- end back to top -->
 
 <!-- body end -->
-
-
 <footer>
     <div class="container">
         <div class="row">
@@ -576,7 +583,8 @@
                     <script>
                         document.write(new Date().getFullYear())
                     </script> Copyright PATAUDI CRICKET CLUB All Right Reserved, Made With <span style="color: red"
-                        class="fa fa-heart"></span> By Aries E Solutions
+                        class="fa fa-heart"></span> By <a style="color: white;"
+                        href="https://www.ariesesolutions.com/">Aries E Solutions</a>
                 </span>
             </div>
             <!-- <div class="col-md-4 box">
@@ -618,10 +626,10 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
-    </script>
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
     integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous">
-    </script>
+</script>
 
 <body>
 
